--- a/FlaskApp/templates/blog.html
+++ b/FlaskApp/templates/blog.html
@@ -13,10 +13,10 @@
     </div>
     {% endfor %}
     {% if prev_url %}
-    <a href="{{ prev_url }}">Newer posts</a>
+    <p><a class="blog-listing-page-nav" href="{{ prev_url }}">Newer posts</a></p>
     {% endif %}
     {% if next_url %}
-    <a href="{{ next_url }}">Older posts</a>
+    <p><a class="blog-listing-page-nav" href="{{ next_url }}">Older posts</a></p>
     {% endif %}
 
     
