--- a/FlaskApp/static/css/style.css
+++ b/FlaskApp/static/css/style.css
@@ -145,21 +145,39 @@ h1 {
   grid-auto-flow: column; }
 
 .blog {
-  margin: 0 4em 0 4em; }
+  margin: 0px auto;
+  display: block;
+  width: 40%; }
+
+.blog-list-item {
+  background-color: #b9e6ec33;
+  padding: 1em;
+  margin-top: 1em; }
 
 .blog-post-title {
+  margin-top: 0px;
   margin-bottom: 3px; }
   .blog-post-title a {
-    color: #222; }
+    color: #222;
+    font-size: 1.3em;
+    text-decoration: none; }
+    .blog-post-title a:hover {
+      color: #555; }
+
+.blog-listing-page-nav {
+  color: #222;
+  text-decoration: none; }
+  .blog-listing-page-nav:hover {
+    color: #555; }
 
 .blog-post-date {
   font-size: .8em;
   margin-top: 0px; }
 
 .blog-post-tools {
-  background-color: #00bcd452;
+  background-color: #00bcd436;
   display: inline-block;
-  padding: 0.6em;
+  padding: .3em 1.3em;
   border-radius: 1em;
   font-size: .8em;
   margin: 0px; }
