--- a/FlaskApp/templates/post.html
+++ b/FlaskApp/templates/post.html
@@ -6,6 +6,9 @@
 <section class="blog">
     <p><a class="blog-listing-page-nav" href="/blog">Back to Posts</a></p>
     <div class="blog-post">
+        {% if current_user.is_authenticated %}
+        <p><a href="/admin/blog/edit/{{post.url_slug}}">Edit this post</p>
+        {% endif %}
         <h4 class="blog-post-title"><a href="/blog/{{post.url_slug}}">{{post.title}}</a></h4>
         <p class="blog-post-date">{{post.date.strftime('%B %d, %Y')}}</p>
         <p class="blog=post-content">{{post.content|safe}}</p>
