--- a/FlaskApp/static/css/media.scss
+++ b/FlaskApp/static/css/media.scss
@@ -193,6 +193,8 @@ close the topnav (.icon) */
 	}
 	.blog {
 		margin: 0 1em;
+		margin-top: 100px;
+		width: 90%;
 	}
 
 	.title_and_description p {
