--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -35,8 +35,8 @@
         </a>
         <a class="nav_bar-link{% if request.path == "/" %} nav_bar-link-active{% endif %}" href="/">Home</a>
         <a class="nav_bar-link{% if request.path == "/blog" %} nav_bar-link-active{% endif %}" href="/blog">Blog</a>
-        <a class="nav_bar-link{% if request.path == "/side_projects" %} nav_bar-link-active{% endif %}" href="/side_projects">Side
-            Projects</a>
+        <!-- <a class="nav_bar-link{% if request.path == "/side_projects" %} nav_bar-link-active{% endif %}" href="/side_projects">Side
+            Projects</a> -->
         <a class="nav_bar-link{% if request.path == "/about_me" %} nav_bar-link-active{% endif %}" href="/about_me">About
             Me</a>
 
