--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="jDakUglJEgAKHYouE23b9bIFHCDgbhmwGyKAltHK1Bk" />
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/static/js/main.js"></script>
